--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div><!--contenido del programaa-->
     </section><!--programa-->
     <section class="invitados contenedor seccion">
-        <h2>Nuestro Invitados</h2>
+        <h2>Nuestros Invitados</h2>
         <ul class="lista-invitados clearfix">
             <li>
                 <div class="invitado">
