--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body class="index">
+    
+    
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -60,7 +62,7 @@
                 <a href="#">Conferencia</a>
                 <a href="#">Calendario</a>
                 <a href="#">Invitados</a>
-                <a href="#">Reservaciones</a>
+                <a href="registro.html">Reservaciones</a>
             </nav>
         </div><!--contenedor-->
     </div><!--cierre de la barra-->
@@ -279,5 +281,16 @@
         </div>
         <p class="copyright">Todos los derechos reservados GDLWEBCAMP 2020</p>
     </footer>
+        <!--script src="js/vendor/modernizr-3.8.0.min.js"></script>-->
+        <!--script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script-->
+        <!--script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script-->
+        <script src="JS/plugins.js"></script>
+        <script src="JS/main.js"></script>
+        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+        <!--script>
+            window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+            ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+        </script>
+        <script src="https://www.google-analytics.com/analytics.js" async></script-->
 </body>
 </html>
