--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                 <div class="programa-evento">
                     <h2>Programa del evento</h2>
                     <nav class="menu-programa">
-                        <a href="#"><i class="fas fa-code"></i>Talleres</a>
-                        <a href="#"><i class="fas fa-comment"></i>Conferencias</a>
-                        <a href="#"><i class="fas fa-university"></i>Seminarios</a>
+                        <a href="#talleres"><i class="fas fa-code"></i>Talleres</a>
+                        <a href="#conferencias"><i class="fas fa-comment"></i>Conferencias</a>
+                        <a href="#seminarios"><i class="fas fa-university"></i>Seminarios</a>
                     </nav>
                     <div id="talleres" class="info-curso ocultar clearfix">
                         <div class="detalle-evento">
@@ -102,6 +102,36 @@
                         </div>
                         <a href="#" class="button float-right">Ver todos</a>
                     </div><!--id talleres-->
+                    <div id="conferencias" class="info-curso ocultar clearfix">
+                        <div class="detalle-evento">
+                            <h3>Cómo ser freelancer</h3>
+                            <p><i class="fa fa-clock"></i>10:00 hrs</p>
+                            <p><i class="fas fa-calendar"></i>10 de Dic</p>
+                            <p><i class="fas fa-user"></i> Gregorio Sánchez</p>
+                        </div>
+                        <div class="detalle-evento">
+                            <h3>Tecnologías del futuro</h3>
+                            <p><i class="fa fa-clock"></i>17:00 hrs</p>
+                            <p><i class="fas fa-calendar"></i>10 de Dic</p>
+                            <p><i class="fas fa-user"></i> Susan Sánchez</p>
+                        </div>
+                        <a href="#" class="button float-right">Ver todos</a>
+                    </div>
+                    <div id="seminarios" class="info-curso ocultar clearfix">
+                        <div class="detalle-evento">
+                            <h3>Diseño UI/UX para moviles</h3>
+                            <p><i class="fa fa-clock"></i>17:00 hrs</p>
+                            <p><i class="fas fa-calendar"></i>11 de Dic</p>
+                            <p><i class="fas fa-user"></i> Jarold García</p>
+                        </div>
+                        <div class="detalle-evento">
+                            <h3>Aprende a programar en una mañana</h3>
+                            <p><i class="fa fa-clock"></i>10:00 hrs</p>
+                            <p><i class="fas fa-calendar"></i>11 de Dic</p>
+                            <p><i class="fas fa-user"></i> Susana Rivera</p>
+                        </div>
+                        <a href="#" class="button float-right">Ver todos</a>
+                    </div>
                 </div><!--programa-evento-->
             </div><!--contenedor-->
         </div><!--contenido del programaa-->
@@ -281,12 +311,13 @@
         </div>
         <p class="copyright">Todos los derechos reservados GDLWEBCAMP 2020</p>
     </footer>
-        <!--script src="js/vendor/modernizr-3.8.0.min.js"></script>-->
-        <!--script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script-->
-        <!--script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script-->
+        <script src="JS/vendor/modernizr-3.8.0.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')></script>
         <script src="JS/plugins.js"></script>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
         <script src="JS/main.js"></script>
+        <script src="JS/vendor/jquery-3.4.1.min.js"></script>
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!--script>
             window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
