--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
     <div class="contador paralax">
         <div class="contenedor">
             <ul class="resumen-evento clearfix">
-                <li><p class="numero">6</p>Invitados</li>
-                <li><p class="numero">15</p>Talleres</li>
-                <li><p class="numero">3</p>Días</li>
-                <li><p class="numero">9</p>Conferencias</li>
+                <li><p class="numero"></p>Invitados</li>
+                <li><p class="numero"></p>Talleres</li>
+                <li><p class="numero"></p>Días</li>
+                <li><p class="numero"></p>Conferencias</li>
             </ul><!--resumen evento-->
         </div><!--contenedor-->
     </div><!--contador-->
@@ -313,16 +313,19 @@
     </footer>
         <script src="JS/vendor/modernizr-3.8.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')></script>
+        <script> window.jQuery || document.write('<script src="JS/vendor/jquery-3.4.1.min.js"><\/script>')</script>
         <script src="JS/plugins.js"></script>
-        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
         <script src="JS/main.js"></script>
         <script src="JS/vendor/jquery-3.4.1.min.js"></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script> -->
+        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+        <script src="JS/jquery.animateNumber.min.js"></script>
+        
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!--script>
             window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
             ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async></script-->
+        </script-->
+        <script src="https://www.google-analytics.com/analytics.js" async></script >
 </body>
 </html>
