--- a/registro.html
+++ b/registro.html
@@ -277,12 +277,13 @@
         <p class="copyright">Todos los derechos reservados GDLWEBCAMP 2020</p>
     </footer>
     <script src="JS/vendor/modernizr-3.8.0.min.js"></script>
-        <!--script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script-->
-        <!--script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script-->
-        <script src="JS/plugins.js"></script>
-        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-        <script src="JS/main.js"></script>
-        <script src="JS/vendor/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script> window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+    <script src="JS/plugins.js"></script>
+    <script src="JS/jquery.animateNumber.js"></script>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="JS/main.js"></script>
+    <script src="JS/vendor/jquery-3.4.1.min.js"></script>
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <!--script>
         window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
