--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <span></span>
             </div>
             <nav class="navegacion-principal clearfix">
-                <a href="#">Conferencia</a>
+                <a href="conferencia.html">Conferencia</a>
                 <a href="#">Calendario</a>
                 <a href="#">Invitados</a>
                 <a href="registro.html">Reservaciones</a>
@@ -277,10 +277,10 @@
         <h2>faltan</h2>
         <div class="cuenta-regresiva contenedor">
             <ul class="clearfix">
-                <li><p class="numero">80</p>días</li>
-                <li><p class="numero">15</p>horas</li>
-                <li><p class="numero">5</p>Minutos</li>
-                <li><p class="numero">30</p>segundos</li>
+                <li><p id = "dias" class="numero"></p>días</li>
+                <li><p id = "horas" class="numero"></p>horas</li>
+                <li><p id = "minutos" class="numero"></p>Minutos</li>
+                <li><p id = "segundos" class="numero"></p>segundos</li>
             </ul>
         </div>
     </section>
@@ -320,6 +320,9 @@
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-animateNumber/0.0.14/jquery.animateNumber.min.js"></script> -->
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
         <script src="JS/jquery.animateNumber.min.js"></script>
+        <script src="JS/jquery.countdown.min.js"></script>
+        <script src="JS/jquery.lettering.js"></script>
+
         
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!--script>
